[ci] Simplify parser testing